modify env for eclipse development